examples/misc/error/compilation/eval_wdt_function.bfml
let _ = 1 2

let main = []